add dates for education

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <div class="edu-info">
             <p class="edu-inst">City University of Hong Kong</p>
             <p>Bachelor of Science (BSc) in Computer Science, Minor in Finance</p>
+            <p>Aug 2018 - Oct 2022</p>
           </div>
         </div>
         <div class="edu-row">
@@ -54,6 +55,7 @@
           <div class="edu-info">
             <p class="edu-inst">University of Warwick</p>
             <p>Exchange Student in Computer Science</p>
+            <p>Jan 2022 - Jul 2022</p>
           </div>
         </div>
         <div class="edu-row">
@@ -65,6 +67,7 @@
           <div class="edu-info">
             <p class="edu-inst">Carnegie Mellon University</p>
             <p>Exchange Student in Computer Science</p>
+            <p>Jan 2020 - May 2020</p>
           </div>
         </div>
         <div class="edu-row">
@@ -76,6 +79,7 @@
           <div class="edu-info">
             <p class="edu-inst">Santa Laurensia School</p>
             <p>SMA Ijazah, Science Stream</p>
+            <p>Aug 2015 - May 2018</p>
           </div>
         </div>
       </div>
