fix spacing issues

--- a/index.html
+++ b/index.html
@@ -189,15 +189,17 @@
           </div>
         </div>
       </div>
-      <h3 class="action-msg text-center">Reach out and let's connect!</h3>
-      <div id="soc-med">
-        <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://www.github.com/michaellimair"><img class="soc-med-img" src="images/github.svg" alt="GitHub"></a></div>
-        <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/michaellimair"><img class="soc-med-img" src="images/facebook.png" alt="Facebook"></a></div>
-        <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/michaelxlimb"><img class="soc-med-img" src="images/ig.png" alt="Instagram"></a></div>
-        <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/michaellimair"><img class="soc-med-img" src="images/linkedin.png" alt="LinkedIn"></a></div>
-        <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UC_Ovswi_aUdREU7CXGsKWwQ"><img class="soc-med-img" src="images/youtube.png" alt="YouTube"></a></div>  
-        <div class="soc-med-row"><iframe class="soc-med-img" allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fmichaellimair&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe></div>
-        <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://mixcloud.com/michaellimair"><img class="soc-med-img" src="images/mix.png" alt="Mixcloud"></a></div>  
+      <div class="soc-med-container">
+        <h3 class="text-center">Reach out and let's connect!</h3>
+        <div id="soc-med">
+          <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://www.github.com/michaellimair"><img class="soc-med-img" src="images/github.svg" alt="GitHub"></a></div>
+          <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/michaellimair"><img class="soc-med-img" src="images/facebook.png" alt="Facebook"></a></div>
+          <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://instagram.com/michaelxlimb"><img class="soc-med-img" src="images/ig.png" alt="Instagram"></a></div>
+          <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/michaellimair"><img class="soc-med-img" src="images/linkedin.png" alt="LinkedIn"></a></div>
+          <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://www.youtube.com/channel/UC_Ovswi_aUdREU7CXGsKWwQ"><img class="soc-med-img" src="images/youtube.png" alt="YouTube"></a></div>  
+          <div class="soc-med-row"><iframe class="soc-med-img" allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fmichaellimair&color=orange_white&size=64" style="width: 64px; height: 64px;"></iframe></div>
+          <div class="soc-med-row"><a target="_blank" rel="noopener noreferrer" href="https://mixcloud.com/michaellimair"><img class="soc-med-img" src="images/mix.png" alt="Mixcloud"></a></div>  
+        </div>  
       </div>
     </div>  
     </div>
