update SOCIF web link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>My name is <a href="https://michaellimair.github.io"><span id="myname">Michael Lim</span></a>, a Computer Science student at the <a href="https://www.cityu.edu.hk" target="_blank">City University of Hong Kong</a>.</p><br>  
       </header>
       <p>I am a full-time software engineer at <a href="https://jpmorganchase.com">JPMorgan Chase Bank N.A. (Hong Kong)</a>, working under the <a href="https://www.jpmorgan.com/solutions/cib/securities-services/risk-as-a-service" target="_blank">Risk as a Service</a> team.</p>
-      <p>I am also formerly a software engineer at <a href="https://eventx.io" target="_blank">EventX Limited</a>, <a href="https://holywings.com" target="_blank">Holywings Indonesia</a>, and <a href="https://socif.co/en/" target="_blank">SOCIF Hong Kong</a>.</p>
+      <p>I am also formerly a software engineer at <a href="https://eventx.io" target="_blank">EventX Limited</a>, <a href="https://holywings.com" target="_blank">Holywings Indonesia</a>, and <a href="https://socif.co/" target="_blank">SOCIF Hong Kong</a>.</p>
       <div class="edu-container">
         <h2 class="action-msg">Education</h2>
         <div class="edu-row">
