--- a/index.html
+++ b/index.html
@@ -49,10 +49,57 @@
           Hi! Welcome to my web page!
         </h1>
         <img src="images/profile-new.jpeg" id="profile-picture" alt="Michael Lim">
-        <p>My name is <a href="https://michaellimair.github.io"><span id="myname">Michael Lim</span></a>, a Computer Science student at the <a href="https://www.cityu.edu.hk" target="_blank">City University of Hong Kong</a>.</p><br>  
+        <p>My name is <a href="https://michaellimair.github.io"><span id="myname">Michael Lim</span></a>, Software Engineer by day, DJ by night.</p><br>  
       </header>
       <p>I am a full-time software engineer at <a href="https://jpmorganchase.com">JPMorgan Chase Bank N.A. (Hong Kong)</a>, working under the <a href="https://www.jpmorgan.com/solutions/cib/securities-services/risk-as-a-service" target="_blank">Risk as a Service</a> team.</p>
       <p>I am also formerly a software engineer at <a href="https://eventx.io" target="_blank">EventX Limited</a>, <a href="https://holywings.com" target="_blank">Holywings Indonesia</a>, and <a href="https://socif.co/" target="_blank">SOCIF Hong Kong</a>.</p>
+      <div class="site-row">
+        <div class="site-col music-container">
+          <h2 class="action-msg">My Music</h2>
+          <p>Yes, I am a Software Engineer by day and DJ by night. Mostly listen to Trance, House, and Techno, but I spin any kind of music as long as it gets the crowd going!</p>
+          <iframe width="100%" height="400" class="yt-embed" src="https://www.youtube.com/embed/videoseries?list=PL_J6flGZeHL2kPqBXJBI9Dxn9QlCeq2SV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100%" height="120" class="middle-music" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fmichaellimair%2F" frameborder="0" ></iframe>
+          <iframe width="100%" height="300" class="sc-embed" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1370610421&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/michaellimair" title="Michael Lim" target="_blank" style="color: #cccccc; text-decoration: none;">Michael Lim</a> · <a href="https://soundcloud.com/michaellimair/sets/mixtapes" title="Mixtapes" target="_blank" style="color: #cccccc; text-decoration: none;">Mixtapes</a></div>
+        </div>
+        <div class="site-col apps-container">
+          <h2 class="action-msg">Some of the apps that I'm proud to be a part of</h2>
+          <div id="apps">
+            <div class="site-block">
+              <div class="site-img">
+                <img src="images/holywings-attendance.png" alt="PT ABG Attendance">
+              </div>
+              <div class="site-desc">
+                <div class="app-title">PT ABG Attendance (Flutter)</div>
+                <div><a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/id/app/pt-abg-attendance/id1553614359"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+                <div style="height: 8px;"></div>
+                <div><a target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=com.holywings.attendance_android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+              </div>
+            </div>
+            <div class="site-block">
+              <div class="site-img">
+                <img src="images/holywings-new.png" alt="Holywings Indonesia">
+              </div>
+              <div class="site-desc">
+                <div class="app-title">Holywings Indonesia (Flutter)</div>
+                <div><a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/us/app/holywings/id1477590019"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+                <div style="height: 8px;"></div>
+                <div><a target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=holywings.id.android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+              </div>
+            </div>
+            <div class="site-block">
+              <div class="site-img">
+                <img src="images/ustransit.png" alt="USTransit">
+              </div>
+              <div class="site-desc">
+                <div class="app-title">USTransit (React Native)</div>
+                <div><a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/hk/app/ustransit/id1475481762?l=en"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+                <div style="height: 8px;"></div>
+                <div><a target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=com.socif.ustransit"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="edu-container">
         <h2 class="action-msg">Education</h2>
         <div class="edu-row">
@@ -104,54 +151,7 @@
           </div>
         </div>
       </div>
-      <div class="site-row">
-        <div class="site-col music-container">
-          <h2 class="action-msg">My Music</h2>
-          <p>Yes, I am a Software Engineer by day and DJ by night. Mostly listen to Trance, House, and Techno, but I spin any kind of music as long as it gets the crowd going!</p>
-          <iframe width="100%" height="400" class="yt-embed" src="https://www.youtube.com/embed/videoseries?list=PL_J6flGZeHL2kPqBXJBI9Dxn9QlCeq2SV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe width="100%" height="120" class="middle-music" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fmichaellimair%2F" frameborder="0" ></iframe>
-          <iframe width="100%" height="300" class="sc-embed" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1370610421&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/michaellimair" title="Michael Lim" target="_blank" style="color: #cccccc; text-decoration: none;">Michael Lim</a> · <a href="https://soundcloud.com/michaellimair/sets/mixtapes" title="Mixtapes" target="_blank" style="color: #cccccc; text-decoration: none;">Mixtapes</a></div>
-        </div>
-        <div class="site-col apps-container">
-          <h2 class="action-msg">Some of the apps that I'm proud to be a part of</h2>
-          <div id="apps">
-            <div class="site-block">
-              <div class="site-img">
-                <img src="images/holywings-attendance.png" alt="PT ABG Attendance">
-              </div>
-              <div class="site-desc">
-                <div class="app-title">PT ABG Attendance (Flutter)</div>
-                <div><a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/id/app/pt-abg-attendance/id1553614359"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
-                <div style="height: 8px;"></div>
-                <div><a target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=com.holywings.attendance_android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
-              </div>
-            </div>
-            <div class="site-block">
-              <div class="site-img">
-                <img src="images/holywings-new.png" alt="Holywings Indonesia">
-              </div>
-              <div class="site-desc">
-                <div class="app-title">Holywings Indonesia (Flutter)</div>
-                <div><a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/us/app/holywings/id1477590019"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
-                <div style="height: 8px;"></div>
-                <div><a target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=holywings.id.android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
-              </div>
-            </div>
-            <div class="site-block">
-              <div class="site-img">
-                <img src="images/ustransit.png" alt="USTransit">
-              </div>
-              <div class="site-desc">
-                <div class="app-title">USTransit (React Native)</div>
-                <div><a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/hk/app/ustransit/id1475481762?l=en"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
-                <div style="height: 8px;"></div>
-                <div><a target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=com.socif.ustransit"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <h2 class="action-msg">I am also building my own startup, check us out!</h2>
+      <h2 class="action-msg">I also built some startups in the past with some amazing people!</h2>
       <div id="startups">
         <div class="site-block">
           <div class="site-img">
