update content and support dark mode

--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
           Hi! Welcome to my web page!
         </h1>
         <img src="images/profile-new.jpeg" id="profile-picture" alt="Michael Lim">
-        <p>My name is <a href="https://michaellimair.github.io"><span id="myname">Michael Lim</span></a>, Software Engineer by day, DJ by night.</p><br>  
+        <p>My name is <a href="https://michaellimair.github.io"><span id="myname">Michael Lim</span></a></p>
+        <p>Software Engineer by day, DJ by night</p><br>
       </header>
-      <p>I am a full-time software engineer at <a href="https://jpmorganchase.com">JPMorgan Chase Bank N.A. (Hong Kong)</a>, working under the <a href="https://www.jpmorgan.com/solutions/cib/securities-services/risk-as-a-service" target="_blank">Risk as a Service</a> team.</p>
-      <p>I am also formerly a software engineer at <a href="https://eventx.io" target="_blank">EventX Limited</a>, <a href="https://holywings.com" target="_blank">Holywings Indonesia</a>, and <a href="https://socif.co/" target="_blank">SOCIF Hong Kong</a>.</p>
+      <p>I am a full-time software engineer at <a href="https://jpmorganchase.com">JPMorgan Chase Bank N.A. (Hong Kong)</a>, working under <a href="https://www.jpmorgan.com/solutions/cib/securities-services/risk-as-a-service" target="_blank">Risk as a Service</a> and Complex Assets team.</p>
+      <p>I am also formerly a software engineer at <a href="https://eventx.io" target="_blank">EventX Limited (HK)</a>, <a href="https://holywings.com" target="_blank">HW Group (ID)</a>, and <a href="https://socif.co/" target="_blank">SOCIF (HK)</a>.</p>
       <div class="site-row">
         <div class="site-col music-container">
           <h2 class="action-msg">My Music</h2>
-          <p>Yes, I am a Software Engineer by day and DJ by night. Mostly listen to Trance, House, and Techno, but I spin any kind of music as long as it gets the crowd going!</p>
+          <p>Mostly listen to Trance, House, and Techno, the kind of music that hits you in the feels and gets you going!</p>
           <iframe width="100%" height="400" class="yt-embed" src="https://www.youtube.com/embed/videoseries?list=PL_J6flGZeHL2kPqBXJBI9Dxn9QlCeq2SV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <iframe width="100%" height="120" class="middle-music" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&light=1&feed=%2Fmichaellimair%2F" frameborder="0" ></iframe>
           <iframe width="100%" height="300" class="sc-embed" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1370610421&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/michaellimair" title="Michael Lim" target="_blank" style="color: #cccccc; text-decoration: none;">Michael Lim</a> · <a href="https://soundcloud.com/michaellimair/sets/mixtapes" title="Mixtapes" target="_blank" style="color: #cccccc; text-decoration: none;">Mixtapes</a></div>
@@ -66,10 +67,21 @@
           <div id="apps">
             <div class="site-block">
               <div class="site-img">
-                <img src="images/holywings-attendance.png" alt="PT ABG Attendance">
+                <img src="images/easytransit.webp" alt="EasyTransit">
               </div>
               <div class="site-desc">
-                <div class="app-title">PT ABG Attendance (Flutter)</div>
+                <div class="app-title">EasyTransit</div>
+                <div><a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/hk/app/easytransit/id1547380145?l=en-GB"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
+                <div style="height: 8px;"></div>
+                <div><a target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=org.hkic.minibuseasy&hl=en"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
+              </div>
+            </div>
+            <div class="site-block">
+              <div class="site-img">
+                <img src="images/holyworld.webp" alt="Holyworld Mobile">
+              </div>
+              <div class="site-desc">
+                <div class="app-title">Holyworld Mobile (prev. PT ABG Attendance) (Flutter)</div>
                 <div><a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/id/app/pt-abg-attendance/id1553614359"><img class="stores" src="images/appstore.svg" alt="App Store"></a></div>
                 <div style="height: 8px;"></div>
                 <div><a target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=com.holywings.attendance_android"><img class="stores playstore" src="images/playstore.png" alt="Play Store"></a></div>  
@@ -77,7 +89,7 @@
             </div>
             <div class="site-block">
               <div class="site-img">
-                <img src="images/holywings-new.png" alt="Holywings Indonesia">
+                <img src="images/holywings.webp" alt="Holywings Indonesia">
               </div>
               <div class="site-desc">
                 <div class="app-title">Holywings Indonesia (Flutter)</div>
@@ -155,11 +167,11 @@
       <div id="startups">
         <div class="site-block">
           <div class="site-img">
-            <a href="https://bivi.us"><img src="images/bivi.svg" alt="Bivi" style="width: 96px; margin-left: 12px; margin-right: 12px;"></a>
+            <img src="images/bivi.svg" alt="Bivi" style="width: 96px; margin-left: 12px; margin-right: 12px;">
           </div>
           <div class="site-desc">
             <div class="app-title">Bivi</div>
-            <div style="font-weight: normal;">At Bivi, we strive to be <b>THE</b> platform where talented college students and ambitious students can come together.</div>
+            <div style="font-weight: normal;">Bivi was built as <b>THE</b> platform where talented college students and ambitious students can come together.</div>
           </div>
         </div>
       </div>
@@ -168,6 +180,9 @@
         <div class="site-block">
           <ul style="padding-left: 16px;">
             <li>
+              C. Chan, C. Zhao, W. T. Chau, Y. Zhou, Q. Liang and M. Lim, "E-Quiz: Empowering Educators with a Self-Contained and Programmable Online Exam System," 2023 IEEE International Conference on Teaching, Assessment and Learning for Engineering (TALE), Auckland, New Zealand, 2023, pp. 1-8, doi: <a href="https://doi.org/10.1109/TALE56641.2023.10398402">10.1109/TALE56641.2023.10398402</a>.
+            </li>  
+            <li>
               Chan, C., Al-Bashabsheh, A., Huang, H., Lim, M., Tam, D., &amp; Zhao, C. (2019, May 31). Neural entropic estimation: A faster path to mutual information estimation. Retrieved March 24, 2021, from <a href="https://arxiv.org/abs/1905.12957v2" target="_blank">https://arxiv.org/abs/1905.12957v2</a>
             </li>  
           </ul>
@@ -175,7 +190,18 @@
       </div>
       <h2 class="action-msg">Practical Projects</h2>
       <div id="sites">
-        <p>Some of the projects are made for my organization, while some of them are made as a freelance gig.</p>
+        <p>Some of the projects I have made before, some paid and some as part of my organizational work.</p>
+        <div class="site-block">
+          <div class="site-img">
+            <a href="https://indome.hk"><img src="images/indome-hk-logo-1.png" alt="InDome HK"></a>
+          </div>
+          <div class="site-desc">
+            <div class="app-title">
+              <p><a href="https://permisi.hk">InDome HK</a> Event Website</p>
+              <p>Technologies and Services: Attendize (Laravel/PHP), DigitalOcean</p>
+            </div>
+          </div>
+        </div>
         <div class="site-block">
           <div class="site-img">
             <a href="https://permisi.hk"><img src="images/permisihk.png" alt="PERMISI HK"></a>
@@ -193,8 +219,8 @@
           </div>
           <div class="site-desc">
             <div class="app-title">
-              <p><a href="https://daftarkartanu.bniremittance.com">KartaNU HK Registration System</a> - BNI Remittance Limited (Hong Kong)</p>
-              <p>Technologies: React, Node.js, Firebase</p>
+              <p>Branch Queue System - BNI Remittance Limited (Hong Kong)</p>
+              <p>Technologies: PHP (Laravel), Socket.io, Google Cloud</p>
             </div>
           </div>
         </div>
