--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <iframe width="100%" height="300" class="sc-embed" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1370610421&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/michaellimair" title="Michael Lim" target="_blank" style="color: #cccccc; text-decoration: none;">Michael Lim</a> · <a href="https://soundcloud.com/michaellimair/sets/mixtapes" title="Mixtapes" target="_blank" style="color: #cccccc; text-decoration: none;">Mixtapes</a></div>
         </div>
         <div class="site-col apps-container">
-          <h2 class="action-msg">Some of the apps that I'm proud to be a part of</h2>
+          <h2 class="action-msg">Some mobile apps that I am proud to be a part of</h2>
           <div id="apps">
             <div class="site-block">
               <div class="site-img">
