update indome hk website

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           </div>
           <div class="site-desc">
             <div class="app-title">
-              <p><a href="https://permisi.hk">InDome HK</a> Event Website</p>
+              <p><a href="https://indome.hk">InDome HK</a> Event Website</p>
               <p>Technologies and Services: Attendize (Laravel/PHP), DigitalOcean</p>
             </div>
           </div>
