open link in new tab

--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
         <div class="site-block">
           <ul style="padding-left: 16px;">
             <li>
-              C. Chan, C. Zhao, W. T. Chau, Y. Zhou, Q. Liang and M. Lim, "E-Quiz: Empowering Educators with a Self-Contained and Programmable Online Exam System," 2023 IEEE International Conference on Teaching, Assessment and Learning for Engineering (TALE), Auckland, New Zealand, 2023, pp. 1-8, doi: <a href="https://doi.org/10.1109/TALE56641.2023.10398402">10.1109/TALE56641.2023.10398402</a>.
+              C. Chan, C. Zhao, W. T. Chau, Y. Zhou, Q. Liang and M. Lim, "E-Quiz: Empowering Educators with a Self-Contained and Programmable Online Exam System," 2023 IEEE International Conference on Teaching, Assessment and Learning for Engineering (TALE), Auckland, New Zealand, 2023, pp. 1-8, doi: <a href="https://doi.org/10.1109/TALE56641.2023.10398402" target="_blank" rel="noopener noreferrer">10.1109/TALE56641.2023.10398402</a>.
             </li>  
             <li>
-              Chan, C., Al-Bashabsheh, A., Huang, H., Lim, M., Tam, D., &amp; Zhao, C. (2019, May 31). Neural entropic estimation: A faster path to mutual information estimation. Retrieved March 24, 2021, from <a href="https://arxiv.org/abs/1905.12957v2" target="_blank">https://arxiv.org/abs/1905.12957v2</a>
+              Chan, C., Al-Bashabsheh, A., Huang, H., Lim, M., Tam, D., &amp; Zhao, C. (2019, May 31). Neural entropic estimation: A faster path to mutual information estimation. Retrieved March 24, 2021, from <a href="https://arxiv.org/abs/1905.12957v2" target="_blank" rel="noopener noreferrer">https://arxiv.org/abs/1905.12957v2</a>
             </li>  
           </ul>
         </div>
